# service/user.go
@@ -1,11 +1,14 @@
 package service
 
 import (
+	"gin-gorm-oj/define"
 	"gin-gorm-oj/helper"
 	"gin-gorm-oj/models"
 	"gorm.io/gorm"
 	"log"
 	"net/http"
+	"strconv"
+	"strings"
 	"time"
 
 	"github.com/gin-gonic/gin"
@@ -186,11 +189,13 @@ func Register(c *gin.Context) {
 	// 数据的插入
 	userIdentity := helper.GetUUID()
 	data := &models.UserBasic{
-		Identity: userIdentity,
-		Name:     name,
-		Password: helper.GetMd5(password),
-		Phone:    phone,
-		Mail:     mail,
+		Identity:  userIdentity,
+		Name:      name,
+		Password:  helper.GetMd5(password),
+		Phone:     phone,
+		Mail:      mail,
+		CreatedAt: models.MyTime(time.Now()),
+		UpdatedAt: models.MyTime(time.Now()),
 	}
 	err = models.DB.Create(data).Error
 	if err != nil {
@@ -215,6 +220,45 @@ func Register(c *gin.Context) {
 	})
 }
 
+// GetRankList
+// @Tags 公共方法
+// @Summary 用户排行榜
+// @Param page query int false "page"
+// @Param size query int false "size"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /rank-list [get]
 func GetRankList(c *gin.Context) {
-	
+	size, _ := strconv.Atoi(c.DefaultQuery("size", define.DefaultSize))
+	page, err := strconv.Atoi(c.DefaultQuery("page", define.DefaultPage))
+	if err != nil {
+		log.Println("GetProblemList page strconv error:", err)
+		return
+	}
+	page = (page - 1) * size
+	var count int64
+	list := make([]*models.UserBasic, 0)
+	err = models.DB.Model(new(models.UserBasic)).Count(&count).Order("pass_num DESC, submit_num ASC").
+		Offset(page).Limit(size).Find(&list).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get Rank list err:" + err.Error(),
+		})
+	}
+
+	for _, v := range list {
+		mail := strings.Split(v.Mail, "@")
+		if len(mail) >= 2 {
+			v.Mail = string(mail[0][0]) + "**@" + mail[1]
+		}
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"list":  list,
+			"count": count,
+		},
+	})
+
 }
